# smartknob-rs

./: .gitignore  .gitmodules  CONCEPT.md  Cargo.toml  LICENSE  README.md  claude.md  set_env.sh
.cargo/: config.toml
.zed/: settings.json
embedded/: Cargo.toml
embedded/.cargo/: config.toml
embedded/smartknob/: Cargo.toml
embedded/smartknob-esp32/: Cargo.toml  build.rs
embedded/smartknob-esp32/src/: building_blocks.rs  cli.rs  display.rs  flash.rs  led_ring.rs  lib.rs  motor_driver.rs  uplink.rs
embedded/smartknob-esp32/src/building_blocks/: button.rs  display.rs  foc.rs  led.rs  shutdown.rs
embedded/smartknob-esp32/src/display/: slint.rs
embedded/smartknob-esp32/src/motor_driver/: mcpwm.rs
embedded/smartknob/src/: lib.rs  motor_control.rs  signals.rs
generic/: Cargo.toml
generic/haptic_demo/: Cargo.toml  chart.html
generic/haptic_demo/src/: main.rs
generic/haptic_lib/: Cargo.toml
generic/haptic_lib/src/: builder.rs  config.rs  curve.rs  lib.rs  pattern.rs  patterns.rs  player.rs
generic/haptic_lib/src/curve/: builder.rs  components.rs
generic/haptic_lib/src/pattern/: builder.rs
generic/idc/: Cargo.toml
generic/idc/src/: lib.rs
generic/ldc1x1x/: Cargo.toml
generic/ldc1x1x/src/: lib.rs
generic/smartknob-cli/: Cargo.toml  chart.html  haptic_config_schema.json  haptic_curve_schema.json  simple_counter.rhai  test_curve.json
generic/smartknob-cli/src/: cli.rs  curves.rs  main.rs
generic/smartknob-cli/src/smartknob/: comm.rs
generic/smartknob-core/: Cargo.toml
generic/smartknob-core/src/: comm.rs  display.rs  flash.rs  haptic_core.rs  haptics.rs  idc.rs  knob_tilt.rs  led_ring.rs  lib.rs  system_settings.rs  uplink.rs
generic/smartknob-core/src/comm/: commands.rs  events.rs
generic/smartknob-core/src/haptic_core/: encoder.rs  haptic_hardware.rs  motor_driver.rs
generic/smartknob-core/src/haptics/: base.rs  haptic_hardware.rs
generic/smartknob-core/src/haptics/base/: config.rs  curve.rs  pattern.rs  player.rs
generic/smartknob-core/src/haptics/base/curve/: builder.rs  components.rs
generic/smartknob-core/src/haptics/base/pattern/: builder.rs
generic/smartknob-core/src/haptics/encoder/: mt6701.rs
generic/smartknob-core/src/system_settings/: log_toggles.rs
generic/smartknob-core/tests/: public_api.rs
haptic_demo/: Cargo.toml  chart.html  t
haptic_demo/src/: main.rs
haptic_lib/: Cargo.toml
haptic_lib/src/: builder.rs  curve.rs  easings.rs  lib.rs  patterns.rs  player.rs
haptic_lib/src/curve/: components.rs
haptic_lib/tests/: public_api.rs
ldc1x1x/: Cargo.toml
ldc1x1x/src/: data.rs
media/: haptic-curve-on-off.html
mt6701/: Cargo.toml
mt6701/src/: lib.rs
smartknob/: Cargo.toml  README.md  build.rs  lv_conf.h  partition_table.csv
smartknob-core/: Cargo.toml
smartknob-core/src/: cli.rs  flash.rs  haptic_core.rs  knob_tilt.rs  lib.rs  shutdown.rs  system_settings.rs
smartknob-core/src/haptic_core/: haptic_hardware.rs
smartknob-core/src/system_settings/: log_toggles.rs
smartknob-esp32/: Cargo.toml
smartknob-esp32/.cargo/: config.toml
smartknob-esp32/src/: display.rs  flash.rs  knob_tilt.rs  lib.rs  shutdown.rs
smartknob-esp32/src/display/: lvgl.rs  slint.rs
smartknob/.cargo/: config.toml
smartknob/src/: cli.rs  config.rs  display.rs  flash.rs  knob_tilt.rs  lib.rs  motor_control.rs  shutdown.rs  signals.rs  slint_support.rs
smartknob/src/display/: lvgl.rs  slint.rs
smartknob/src/motor_control/: encoder.rs  haptic_system.rs  motor_driver.rs
smartknob/src/motor_control/encoder/: mt6701.rs
smartknob/src/motor_control/motor_driver/: mcpwm.rs
smartknob/ui/: main.slint  slider.slint
