[workspace]
resolver = "2"
members = ["smartknob", "smartknob-esp32"]

[workspace.dependencies]
esp-backtrace = "0.19.0"
esp-bootloader-esp-idf = "0.5.0"
esp-hal = "~1.1"
esp-rtos = { version = "0.3.0", default-features = false }
esp-println = "0.17.0"
esp-storage = "0.9.0"
esp-sync = "0.2.1"
embassy-embedded-hal = "0.6.0"
embassy-executor = "0.10.0"
embassy-sync = "0.8.0"
embassy-time = "0.5.1"
esp-alloc = "0.10.0"
critical-section = "1.2.0"
foc = "0.3.0"
log = "0.4.29"
static_cell = "2.1.1"
fixed = "1.29.0"
embassy-usb = "0.6.0"
embedded-io-async = "0.7.0"
ufmt = "0.2.0"
embedded-cli = { git = "https://github.com/florianL21/embedded-cli-rs.git", rev = "6b47952f1f4672160e7dbca8b0cfeed4e2aa153d" }
thiserror = { version = "2.0.18", default-features = false }
serde = { version = "1.0.228", default-features = false }
postcard = "1.1.3"
embedded-hal-async = "1.0.0"
smartknob-core = { path = "../generic/smartknob-core" }
smartknob-esp32 = { path = "smartknob-esp32" }
ekv = { git = "https://github.com/embassy-rs/ekv.git", rev = "a662df3" }
embassy-futures = "0.1.2"
embedded-storage = "0.3.1"
embedded-graphics = "0.8.2"
embedded-graphics-core = "0.4.1"
libm = "0.2.16"
lcd-async = "0.1.3"
bytemuck = "1.25.0"
ldc1x1x = { path = "../generic/ldc1x1x" }
nalgebra = { version = "0.34.2", default-features = false }
average = "0.17.0"
atomic_float = "1.1.0"
esp-hal-smartled = { git = "https://github.com/florianL21/esp-hal-community.git", rev = "142bbb5" }
smart-leds = "0.4.0"
cobs = { version = "0.5.1", default-features = false }
embassy-usb-logger = "0.6.0"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
