[workspace]
resolver = "2"
members = ["ldc1x1x", "smartknob-cli", "smartknob-core"]

[workspace.dependencies]
enterpolation = { version = "0.3.0", default-features = false }
embedded-hal-async = "1.0.0"
cordic = "0.1.5"
num-traits = { version = "0.2.19", default-features = false }
embassy-sync = "0.8.0"
embassy-time = "0.5.1"
foc = "0.3.0"
atomic_float = "1.1.0"
ekv = { git = "https://github.com/embassy-rs/ekv.git", rev = "a662df3" }
embassy-futures = "0.1.2"
embedded-storage = "0.3.1"
ufmt = "0.2.0"
embedded-cli = { git = "https://github.com/florianL21/embedded-cli-rs.git", rev = "12434bd4" }
embedded-io-async = "0.7.0"
embedded-io = "0.7.1"
embedded-hal = "1.0.0"
embassy-executor = "0.10.0"
smart-leds = "0.4.0"
average = "0.17.0"
charming = "0.6.0"
env_logger = "0.11.10"
fixed = "1.29.0"
log = "0.4.29"
heapless = "0.9.3"
postcard = { version = "1.1.3", default-features = false }
serde = { version = "1.0.228", default-features = false }
thiserror = { version = "2.0.18", default-features = false }
clap = { version = "4.6.1" }
smartknob-core = { path = "smartknob-core" }
cobs = "0.5.1"
anyhow = { version = "1.0.102" }
static_cell = "2.1.1"
tokio = { version = "1.52.3" }
tokio-serial = "5.4.5"
tokio-util = { version = "0.7.18" }
futures = "0.3.32"
serde_json = "1.0.150"
open = "5.3.5"
schemars = { version = "1.2.1" }
