[package]
name = "haptic_lib"
version = "0.1.0"
edition = "2021"


[dependencies]
easing-fixed = { git = "https://github.com/florianL21/easing-fixed.git", rev = "82865f28406e10fdfe476941477628eaff2ca105" }
fixed = { version = "1.29.0", features = ["serde"] }
heapless = { version = "0.9.2", features = ["serde"] }
postcard = { version = "1.1.3", features = ["experimental-derive"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
thiserror = { version = "2.0.17", default-features = false }
