[package]
name = "haptic_lib"
version = "0.1.0"
edition = "2024"


[dependencies]
fixed = { version = "1.29.0", features = ["serde"] }
heapless = { version = "0.9.2", features = ["serde", "portable-atomic"] }
postcard = { version = "1.1.3", features = ["experimental-derive"] }
serde = { version = "1.0.228", default-features = false, features = [
    "derive",
    "alloc",
] }
thiserror = { version = "2.0.17", default-features = false }
enterpolation = { version = "0.3.0", default-features = false, features = [
    "libm",
    "linear",
    "bezier",
    "serde",
] }
log = "0.4.29"
