[package]
edition = "2024"
name = "smartknob-core"
version = "0.1.0"


[dependencies]
embassy-sync = "0.7.2"
embassy-time = "0.5.0"
foc = "0.3.0"
log = "0.4.28"
fixed = { version = "1.29.0", features = ["serde"] }
atomic_float = "1.1.0"
thiserror = { version = "2.0.17", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
postcard = { version = "1.1.3", features = ["experimental-derive"] }
cordic = "0.1.5"
haptic_lib = { path = "../haptic_lib" }
embedded-hal-async = "1.0.0"
enterpolation = { version = "0.3.0", default-features = false, features = [
  "libm",
  "linear",
  "serde",
] }
num-traits = { version = "0.2.19", default-features = false, features = [
  "libm",
] }
