[package]
edition = "2024"
name = "smartknob-esp32"
version = "0.1.0"

[dependencies]
esp-hal = { version = "1.0.0", features = ["esp32s3", "log-04", "unstable"] }
smartknob-core = { path = "../smartknob-core" }
ekv = { git = "https://github.com/embassy-rs/ekv.git", rev = "b68fd9a9369ab1b7f6181e8f7fc97aa99012a1e3" }
embassy-futures = "0.1.2"
embassy-sync = "0.7.2"
embedded-storage = "0.3.1"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }
esp-storage = { version = "0.8.1", features = ["esp32s3", "critical-section"] }
postcard = { version = "1.1.3", features = ["experimental-derive"] }
log = "0.4.28"
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
thiserror = { version = "2.0.17", default-features = false }
static_cell = { version = "2.1.1", features = ["nightly"] }
ufmt = "0.2.0"
embedded-graphics = "0.8.1"
embedded-graphics-core = "0.4.0"
embassy-executor = { version = "0.9.1", features = ["log"] }
libm = "0.2.13"
embassy-embedded-hal = "0.5.0"
embassy-time = "0.5.0"
lcd-async = "0.1.1"
lv_bevy_ecs = { version = "0.6.5", default-features = false, optional = true }
bevy_ecs = { version = "0.18.0", default-features = false, optional = true }
slint = { git = "https://github.com/florianL21/slint", rev = "d3a47ed", default-features = false, features = [
    "compat-1-2",
    "unsafe-single-threaded",
    "libm",
    "renderer-software",
], optional = true }
bytemuck = "1.25.0"
ldc1x1x = { path = "../ldc1x1x" }
nalgebra = { version = "0.34.1", default-features = false, features = [
    "macros",
    "nalgebra-macros",
    "libm",
] }
average = "0.16.0"
atomic_float = "1.1.0"

[build-dependencies]
slint-build = { git = "https://github.com/florianL21/slint", rev = "d3a47ed", optional = true }

[features]
default = ["slint"]
lvgl = ["dep:lv_bevy_ecs", "dep:bevy_ecs"]
slint = ["dep:slint-build", "dep:slint"]
