[package]
edition = "2021"
name = "smartknob-rs"
version = "0.1.0"

[[bin]]
name = "smartknob-rs"
path = "./src/bin/main.rs"

[dependencies]
esp-backtrace = { version = "0.18.0", features = [
  "esp32s3",
  "panic-handler",
  "println",
] }
esp-bootloader-esp-idf = { version = "0.3.0", features = ["esp32s3"] }
esp-hal = { version = "1.0.0-rc.1", features = [
  "esp32s3",
  "log-04",
  "unstable",
] }
esp-rtos = { version = "0.1.1", default-features = false, features = [
  "esp32s3",
  "embassy",
  "log-04",
] }
esp-println = { version = "0.16.0", features = ["esp32s3", "log-04"] }
esp-storage = { version = "0.8.0", features = ["esp32s3", "critical-section"] }
esp-sync = { version = "0.1.0", features = ["esp32s3"] }
embassy-embedded-hal = "0.5.0"
embassy-executor = { version = "0.9.0", features = ["log"] }
embassy-sync = "0.7.2"
embassy-time = "0.5.0"
esp-alloc = "0.9.0"
critical-section = "1.2.0"
esp-hal-smartled = { path = "../esp-hal-community/esp-hal-smartled", features = [
  "esp32s3",
] }
foc = "0.3.0"
log = "0.4.27"
smart-leds = "0.4.0"
static_cell = { version = "2.1.1", features = ["nightly"] }
mt6701 = { path = "../mt6701" }
ldc1x1x = { path = "../ldc1x1x" }
nalgebra = { version = "0.34.1", default-features = false, features = [
  "macros",
  "nalgebra-macros",
  "libm",
] }
average = "0.16.0"
libm = "0.2.13"
fixed = "1.29.0"
embassy-usb = "0.5.1"
embedded-io-async = "0.7.0"
ufmt = "0.2.0"
embedded-cli = { path = "../embedded-cli-rs/embedded-cli" }
atomic_float = "1.1.0"
ekv = { git = "https://github.com/embassy-rs/ekv.git", rev = "b68fd9a9369ab1b7f6181e8f7fc97aa99012a1e3" }
embedded-storage = "0.3.1"
thiserror = { version = "2.0.17", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
postcard = { version = "1.1.3", features = ["experimental-derive"] }


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1        # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
