[package]
edition = "2024"
name = "smartknob-rs"
version = "0.1.0"

[[bin]]
name = "smartknob-rs"
path = "./src/bin/main.rs"

[dependencies]
esp-backtrace = { version = "0.18.1", features = [
  "esp32s3",
  "panic-handler",
  "println",
] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }
esp-hal = { version = "1.0.0", features = [
  "esp32s3",
  "log-04",
  "unstable",
  "psram",
] }
esp-rtos = { version = "0.2.0", default-features = false, features = [
  "esp32s3",
  "embassy",
  "log-04",
] }
esp-println = { version = "0.16.1", features = ["esp32s3", "log-04"] }
esp-storage = { version = "0.8.1", features = ["esp32s3", "critical-section"] }
esp-sync = { version = "0.1.1", features = ["esp32s3"] }
embassy-embedded-hal = "0.5.0"
embassy-executor = { version = "0.9.1", features = ["log"] }
embassy-sync = "0.7.2"
embassy-time = "0.5.0"
esp-alloc = "0.9.0"
critical-section = "1.2.0"
esp-hal-smartled = { git = "https://github.com/esp-rs/esp-hal-community.git", rev = "d9239ac", features = [
  "esp32s3",
] }
foc = "0.3.0"
log = "0.4.28"
smart-leds = "0.4.0"
static_cell = { version = "2.1.1", features = ["nightly"] }
fixed = { version = "1.29.0", features = ["serde"] }
embassy-usb = "0.5.1"
embedded-io-async = "0.7.0"
ufmt = "0.2.0"
embedded-cli = { git = "https://github.com/florianL21/embedded-cli-rs.git", rev = "6b47952f1f4672160e7dbca8b0cfeed4e2aa153d" }
thiserror = { version = "2.0.17", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
postcard = { version = "1.1.3", features = ["experimental-derive"] }
haptic_lib = { path = "../haptic_lib" }
embedded-hal-async = "1.0.0"
smartknob-core = { path = "../smartknob-core" }
smartknob-esp32 = { path = "../smartknob-esp32" }

[features]
default = ["slint"]
lvgl = ["smartknob-esp32/lvgl"]
slint = ["smartknob-esp32/slint"]
