[package]
edition = "2024"
name = "smartknob-esp32"
version = "0.1.0"

[dependencies]
esp-hal = { workspace = true, features = ["esp32s3", "log-04", "unstable"] }
smartknob-core = { workspace = true }
ekv = { workspace = true }
embassy-futures = { workspace = true }
embassy-sync = { workspace = true }
embedded-storage = { workspace = true }
esp-bootloader-esp-idf = { workspace = true, features = ["esp32s3"] }
esp-storage = { workspace = true, features = ["esp32s3", "critical-section"] }
postcard = { workspace = true, features = ["experimental-derive"] }
log = { workspace = true }
serde = { workspace = true, default-features = false, features = ["derive"] }
thiserror = { workspace = true, default-features = false }
static_cell = { workspace = true, features = ["nightly"] }
ufmt = { workspace = true }
embedded-graphics = { workspace = true }
embedded-graphics-core = { workspace = true }
embassy-executor = { workspace = true, features = ["log"] }
libm = { workspace = true }
embassy-embedded-hal = { workspace = true }
embassy-time = { workspace = true }
lcd-async = { workspace = true }
lv_bevy_ecs = { version = "0.6.5", default-features = false, optional = true }
bevy_ecs = { version = "0.18.0", default-features = false, optional = true }
slint = { git = "https://github.com/florianL21/slint", rev = "d3a47ed", default-features = false, features = [
    "compat-1-2",
    "unsafe-single-threaded",
    "libm",
    "renderer-software",
], optional = true }
bytemuck = { workspace = true }
ldc1x1x = { workspace = true }
nalgebra = { workspace = true, default-features = false, features = [
    "macros",
    "nalgebra-macros",
    "libm",
] }
average = { workspace = true }
atomic_float = { workspace = true }
esp-hal-smartled = { workspace = true, features = ["esp32s3"] }
smart-leds = { workspace = true }
cobs = { workspace = true }
embedded-io-async = { workspace = true }
embassy-usb = { workspace = true }
embassy-usb-logger = { workspace = true }
idc = { workspace = true }

[build-dependencies]
slint-build = { git = "https://github.com/florianL21/slint", rev = "d3a47ed", optional = true }

[features]
default = ["slint"]
lvgl = ["dep:lv_bevy_ecs", "dep:bevy_ecs"]
slint = ["dep:slint-build", "dep:slint"]
