[package]
edition = "2024"
name = "smartknob-rs"
version = "0.1.0"

[[bin]]
name = "smartknob-rs"
path = "./src/bin/main.rs"

[[bin]]
name = "seedlabs-devkit"
path = "./src/bin/seedlabs_devkit.rs"
required-features = ["lvgl"]

[dependencies]
esp-backtrace = { workspace = true, features = [
    "esp32s3",
    "panic-handler",
    "println",
] }
esp-bootloader-esp-idf = { workspace = true, features = ["esp32s3"] }
esp-hal = { workspace = true, features = ["esp32s3", "log-04", "unstable"] }
esp-rtos = { workspace = true, default-features = false, features = [
    "esp32s3",
    "embassy",
    "log-04",
] }
esp-println = { workspace = true, features = ["esp32s3", "log-04"] }
esp-storage = { workspace = true, features = ["esp32s3", "critical-section"] }
esp-sync = { workspace = true, features = ["esp32s3"] }
embassy-embedded-hal = { workspace = true }
embassy-executor = { workspace = true, features = ["log"] }
embassy-sync = { workspace = true }
embassy-time = { workspace = true }
esp-alloc = { workspace = true }
critical-section = { workspace = true }
foc = { workspace = true }
log = { workspace = true }
static_cell = { workspace = true, features = ["nightly"] }
fixed = { workspace = true, features = ["serde"] }
embassy-usb = { workspace = true }
embedded-io-async = { workspace = true }
ufmt = { workspace = true }
thiserror = { workspace = true, default-features = false }
serde = { workspace = true, default-features = false, features = ["derive"] }
postcard = { workspace = true, features = ["experimental-derive"] }
embedded-hal-async = { workspace = true }
smartknob-core = { workspace = true }
smartknob-esp32 = { workspace = true }
embassy-usb-logger = { workspace = true }

[features]
default = ["slint"]
lvgl = ["smartknob-esp32/lvgl"]
slint = ["smartknob-esp32/slint"]
