[package]
name = "haptic_lib"
version = "0.1.0"
edition = "2024"


[dependencies]
fixed = { workspace = true, features = ["serde"] }
heapless = { workspace = true, features = ["serde", "portable-atomic"] }
postcard = { workspace = true, features = ["experimental-derive"] }
serde = { workspace = true, default-features = false, features = [
    "derive",
    "alloc",
] }
thiserror = { workspace = true, default-features = false }
enterpolation = { workspace = true, default-features = false, features = [
    "libm",
    "linear",
    "bezier",
    "serde",
] }
log = { workspace = true }

[dev-dependencies]
matches = "0.1.10"
