[package]
name = "idc"
description = "Inter device communication crate for communicating between the smartknob and the host PC"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { workspace = true, features = ["derive"], optional = true }
postcard = { workspace = true, default-features = false, features = [
    "experimental-derive",
] }
serde = { workspace = true, default-features = false, features = [
    "alloc",
    "derive",
] }
thiserror = { workspace = true, default-features = false }

[features]
default = []
host = ["dep:clap"]
