[package]
name = "smartknobctl"
description = "Smartknob control CLI for performing various operation with and around a smartknob device attached via USB"
version = "0.1.0"
edition = "2024"

[dependencies]
charming = { workspace = true }
env_logger = { workspace = true }
fixed = { workspace = true, features = ["std"] }
haptic_lib = { workspace = true }
log = { workspace = true }
idc = { workspace = true, features = ["host"] }
clap = { workspace = true, features = ["derive"] }
postcard = { workspace = true, features = ["use-std"] }
cobs = { workspace = true }
anyhow = { workspace = true, features = ["backtrace"] }
static_cell = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-serial = { workspace = true }
tokio-util = { workspace = true, features = ["codec"] }
futures = { workspace = true }
serde_json = { workspace = true }
open = { workspace = true }
