[package]
edition = "2024"
name = "smartknob-core"
version = "0.1.0"


[dependencies]
embassy-sync = { workspace = true }
embassy-time = { workspace = true }
foc = { workspace = true }
log = { workspace = true }
fixed = { workspace = true, features = ["serde"] }
atomic_float = { workspace = true }
thiserror = { workspace = true, default-features = false }
serde = { workspace = true, default-features = false, features = [
    "derive",
    "alloc",
] }
postcard = { workspace = true, features = ["experimental-derive"] }
cordic = { workspace = true }
embedded-hal-async = { workspace = true }
enterpolation = { workspace = true, default-features = false, features = [
    "libm",
    "linear",
    "bezier",
    "serde",
] }
num-traits = { workspace = true, default-features = false, features = ["libm"] }
ekv = { workspace = true }
embassy-futures = { workspace = true }
embedded-storage = { workspace = true }
ufmt = { workspace = true }
heapless = { workspace = true, features = ["serde", "portable-atomic"] }
embedded-cli = { workspace = true }
embedded-io-async = { workspace = true }
embedded-io = { workspace = true }
embedded-hal = { workspace = true }
embassy-executor = { workspace = true }
smart-leds = { workspace = true }
average = { workspace = true }
schemars = { workspace = true, optional = true }
clap = { workspace = true, features = ["derive"], optional = true }


[dev-dependencies]
matches = "0.1.10"

[features]
default = []
host = ["schemars", "dep:clap"]
